--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -8,6 +8,7 @@
 
 body{
     background: linear-gradient(45deg, #6A82FB  , #FC5C7D);
+    max-width: 100%:
     height: 100vh;
     margin-left: 2px;
 }
